--- a/scss/theme/_banner.scss
+++ b/scss/theme/_banner.scss
@@ -1,6 +1,6 @@
 //--------- Start Home Banner Area -------------//
 .home-banner-area {
-	background: url(../img/home-banner-bg.png) no-repeat;
+	background: url(../img/NEW_home-banner-bg.png) no-repeat;
 	background-size: cover;
 	background-position: center center;
 	max-height: 1200px;
